--- a/Entregable1/.project
+++ b/Entregable1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Entregable 1 (1)</name>
+	<name>EntregableD</name>
 	<comment></comment>
 	<projects>
 	</projects>
